# Gencrest

./: CMakeLists.txt  README.md  build.sh
include/: Canvas.hpp  Comparator.hpp  Ellipse.hpp  Picture.hpp  Util.hpp
src/: Canvas.cc  Comparator.cc  Ellipse.cc  Picture.cc  Util.cc  main.cc
